--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,16 @@
 <resources>
 
     <!--Grayscale -->
-    <color name="Gray_90">#131318</color>
+    <color name="Gray_95">#060606</color>
     <color name="Gray_100">#0E0E12</color>
+    <color name="Gray_90">#131318</color>
     <color name="Gray_80">#1C1C23</color>
-    <color name="Gray_70">#353542</color>
+    <color name="Gray_75">#282832</color>
+    <color name="Gray_65">#30303C</color>
+    <color name="Gray_62">#3F3F4F</color>
+    <color name="Gray_56">#3D3D47</color>
+    <color name="Gray_55">#414152</color>
+    <color name="Gray_70">#353542</color> <!-- по яркости Gray_70 ≈ Gray_55 -->
     <color name="Gray_60">#4E4E61</color>
     <color name="Gray_50">#666680</color>
     <color name="Gray_40">#83839C</color>
@@ -14,12 +20,6 @@
     <color name="Gray_10">#E0E0E6</color>
     <color name="White">#FFFFFF</color>
 
-    <color name="Gray_95">#060606</color>
-    <color name="Gray_75">#282832</color>
-    <color name="Gray_65">#30303c</color>
-    <color name="Gray_62">#3F3F4F</color>
-    <color name="Gray_55">#414152</color>
-    <color name="Gray_56">#3d3d47</color>
 
 
     <!--Primary -->
