✨ Перенос экрана подписок на отдельный Fragment
- Вынес экран "Мои подписки" и "Предстоящие платежи" с главного экрана в отдельный фрагмент `MySubFragment`
- Реализован ViewPager с двумя вкладками: активные подписки и ближайшие платежи
- Добавлены layout-файлы: fragment_my_sub.xml, fragment_my_sub_upcoming_bills.xml
- Обновлены UI-элементы с отображением суммы подписок и ценой (с валютой) для самой дорогой и самой дешёвой
- Для карточек добавлена анимация нажатия (scale) и лёгкая вибрация
- Подключено получение данных из базы через ViewModel и Flow
- Переименованы и перемещены старые фрагменты: перенёс `fragment_home_up.xml` и `fragment_spend.xml`
- Проведён рефакторинг пакетов и структур: все экраны по подпискам теперь в `presentation.mySub`
- Подключены недостающие библиотеки и исправлены зависимости в build.gradle

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -6,7 +6,7 @@
         android:title="" />
 
     <item
-        android:id="@+id/spendFragment"
+        android:id="@+id/mySubFragment"
         android:icon="@drawable/ic_bottom_navigation_spending_budgets"
         android:title="" />
 
