--- a/app/src/main/res/layout/fragment_add_sub_create.xml
+++ b/app/src/main/res/layout/fragment_add_sub_create.xml
@@ -12,12 +12,12 @@
         android:id="@+id/top_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:shapeAppearanceOverlay="@style/CustomShapeUpCard"
         app:cardBackgroundColor="@color/Gray_75"
         app:cardElevation="6dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:shapeAppearanceOverlay="@style/CustomShapeUpCard">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -44,7 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="-6dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="24dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="Back"
                 android:src="@drawable/ic_arrow_back"
@@ -54,15 +54,16 @@
             <!-- Заголовок страницы -->
             <TextView
                 android:id="@+id/title"
-                style="@style/TextAppearance.BodyLarge"
+                style="@style/TextAppearance.Headline4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
                 android:text="New Subscription"
                 android:textColor="@color/Gray_30"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@id/back_button"
-                app:layout_constraintEnd_toEndOf="@id/end_border_upcard"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="@id/start_border_upcard"
+                app:layout_constraintStart_toEndOf="@+id/back_button"
                 app:layout_constraintTop_toTopOf="@id/back_button" />
 
             <!-- Иконка приложения -->
@@ -135,10 +136,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 android:hint="Price*"
                 android:maxWidth="140dp"
                 android:minWidth="140dp"
-                android:layout_marginBottom="16dp"
                 app:cursorColor="@color/Accent_P_100"
                 app:hintTextColor="@color/Gray_30"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -166,19 +167,18 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:background="@drawable/shape_14dp"
-                app:cardElevation="8dp"
                 android:clickable="true"
                 android:text="Default currency"
                 android:textAllCaps="false"
                 android:textStyle="bold"
                 app:backgroundTint="@color/Gray_55"
+                app:cardElevation="8dp"
                 app:layout_constraintBottom_toBottomOf="@+id/subscription_price_txt_layout"
                 app:layout_constraintEnd_toEndOf="@id/end_border_upcard"
                 app:layout_constraintStart_toEndOf="@+id/subscription_price_txt_layout"
                 app:layout_constraintTop_toTopOf="@+id/subscription_price_txt_layout" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
-
 
 
     <!-- Нижняя карточка с деталями подписки -->
@@ -613,12 +613,12 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:background="@drawable/shape_24dp"
                 android:layout_marginBottom="16dp"
+                android:background="@drawable/shape_24dp"
                 android:elevation="8dp"
                 android:text="Add this platform"
-                android:textColor="@color/White"
                 android:textAllCaps="false"
+                android:textColor="@color/White"
                 app:backgroundTint="@color/Accent_P_100"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/end_border"
