--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -11,15 +11,14 @@
 
     <TextView
         android:id="@+id/title"
-        style="@style/TextAppearance.BodyLarge"
+        style="@style/TextAppearance.Headline4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Settings"
+        android:textStyle="bold"
         android:textColor="@color/Gray_30"
-        app:layout_constraintEnd_toStartOf="@id/end_border"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toEndOf="@id/start_border"
+        app:layout_constraintStart_toStartOf="@id/start_border"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
