--- a/app/src/main/res/drawable/img_sub_placeholder.xml
+++ b/app/src/main/res/drawable/img_sub_placeholder.xml
@@ -3,7 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:shape="rectangle"
     app:layout_constraintDimensionRatio="h,1:1">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/Gray_55" />
 
+        </shape>
+    </item>
     <item
         android:width="140dp"
         android:height="140dp"
