--- a/app/src/main/res/layout/fragment_my_sub.xml
+++ b/app/src/main/res/layout/fragment_my_sub.xml
@@ -262,8 +262,8 @@
         android:layout_marginTop="4dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/end_border"
-        app:layout_constraintStart_toStartOf="@+id/start_border"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tab_layout_subscription"
         tools:listitem="@layout/fragment_my_sub_item_rv" />
 
