--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -61,7 +61,11 @@
         android:id="@+id/addSubCreateFragment"
         android:name="com.anshok.subzy.presentation.addSub.create.AddSubCreateFragment"
         android:label="fragment_vacancy"
-        tools:layout="@layout/fragment_add_sub_create" />
+        tools:layout="@layout/fragment_add_sub_create" >
+        <action
+            android:id="@+id/action_addSubCreateFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
 
     <!-- DetailsSubFragment -->
     <fragment
